Make a WeakeningSet a union of facts, not of the values that carry them
`RuleWithoutALine.sameAs` and `Incompleteness.identity` each say what makes two
findings one, and each leaves something out: the handle an author is sent to, and
the place a reason was met at. `StandingQuestion` says the same of its handle in
prose and of what a reading was short of, and writes down no identity at all. The
carrier that unions them folded on Java value equality, so it was folding on a
finer relation than the one those types declare, and one fact carried by two
values was two.

What that costs is written into the shape of the readers. `keptOpenBy` does not
fold, so two such values are two entries whose published content is identical;
`ModuleReport.incompleteness` and a second fold in `Coverages` wrote the fold out
by hand and kept whichever occurrence a walk reached first, so which place a
reader was sent to followed the walk.

None of it is reachable today. Running the suite with the merge instrumented to
throw whenever it accumulates anything shows that no production path reaches it:
of 11,581 tests, only the algebra tests added here exercise a merge. A rule's
handle is a function of the rule at both producers, and the observation whose
place is not a function of its fact — a linking that failed, cited at each
example — cannot be raised in process. So this is a correction to the
representation and not to an output, and the property that made it harmless is
now one nothing has to rely on.

So the fact is a value at each of the three, the evidence is accumulated
commutatively beside it, and the fold happens where the account is put together.
`ClosureGap` answers what one of its gaps is and how two of them come together;
`MeasureClosure` and `WeakeningSet` are two union boundaries that both ask it,
rather than two places that decide it. Two hand-written first-representative
folds go, and the six that remain upstream are no longer what stands between one
fact and two entries.

`Weak